tests/machine/x/hs/dataset_sort_take_limit.error

tests/machine/x/hs/dataset_sort_take_limit.hs:181:38: error:
    • No instance for (Ord AnyValue)
        arising from a use of ‘List.sortOn’
    • In the second argument of ‘map’, namely
        ‘(List.sortOn
            fst
            [((- fromMaybe (error "missing") (Map.lookup "price" (p))), p) |
               p <- products])’
      In the second argument of ‘drop’, namely
        ‘(map
            snd
            (List.sortOn
               fst
               [((- fromMaybe (error "missing") (Map.lookup "price" (p))), p) |
                  p <- products]))’
      In the second argument of ‘take’, namely
        ‘(drop
            1
            (map
               snd
               (List.sortOn
                  fst
                  [((- fromMaybe (error "missing") (Map.lookup "price" (p))), p) |
                     p <- products])))’
    |
181 | expensive = take 3 (drop 1 (map snd (List.sortOn fst [((-fromMaybe (error "missing") (Map.lookup "price" (p))), p) | p <- products])))
    |                                      ^^^^^^^^^^^

tests/machine/x/hs/dataset_sort_take_limit.hs:181:57: error:
    • No instance for (Num AnyValue)
        arising from a use of syntactic negation
    • In the expression:
        - fromMaybe (error "missing") (Map.lookup "price" (p))
      In the expression:
        ((- fromMaybe (error "missing") (Map.lookup "price" (p))), p)
      In the second argument of ‘List.sortOn’, namely
        ‘[((- fromMaybe (error "missing") (Map.lookup "price" (p))), p) |
            p <- products]’
    |
181 | expensive = take 3 (drop 1 (map snd (List.sortOn fst [((-fromMaybe (error "missing") (Map.lookup "price" (p))), p) | p <- products])))
    |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
